# utilities

./: .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  release-notes.md  version.json
.github/workflows/: build_mac.yaml  integrate.yaml  pipeline.yaml  release.yaml
ci_cd/: build_and_copy.sh  build_debug.sh  build_mac.sh  build_release.sh  build_validate.sh  bundle.sh  clean.sh  codesign_notarize.sh  codesign_notarize_installer.sh  codesign_notarize_plugins.sh  create_release_mac.sh  package.sh  release.sh  upload_release.sh  validate.sh
ci_cd/packaging/mac/: bw_utility.pkgproj  introduction.html  readme.html  readme.txt  utilities.pkgproj
source/: PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  no_magic_numbers.h  typedefs.h
source/dsp/: CrossoverFilter.cpp  CrossoverFilter.h  SmoothLinear.cpp  SmoothLinear.h
source/gui/: BassMono.cpp  BassMono.h  Channels.cpp  Channels.h  DCBlock.cpp  DCBlock.h  Footer.cpp  Footer.h  Header.cpp  Header.h  Look.cpp  Look.h  PhaseFlip.cpp  PhaseFlip.h  SliderHorizontal.cpp  SliderHorizontal.h  SliderNorm.cpp  SliderNorm.h  SliderRotary.h  SliderRotaryOff.cpp  SliderRotaryOff.h  Sliders.cpp  Sliders.h  Spacer.cpp  Spacer.h  Tooltip.cpp  Tooltip.h  WindowContents.cpp  WindowContents.h  colours.h  sizes.h
source/gui/components/: CheckboxLabeled.cpp  CheckboxLabeled.h  LabelTitle.cpp  LabelTitle.h  LinkButton.h  SliderHorizontal.cpp  SliderHorizontal.h  SliderHorizontalLabeled.cpp  SliderHorizontalLabeled.h  SliderRotary.cpp  SliderRotary.h  SliderRotaryLabeled.cpp  SliderRotaryLabeled.h  Spacer.cpp  Spacer.h
